--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'antlr'
 }
 
 repositories {
@@ -19,14 +20,32 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation(platform('org.junit:junit-bom:5.7.2'))
+	testImplementation('org.junit.jupiter:junit-jupiter')
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1-jre'
+
+    // antlr 4
+    antlr "org.antlr:antlr4:4.9.2"
 }
+
 
 application {
     // Define the main class for the application.
     mainClass = 'pwms.App'
 }
+
+generateGrammarSource {
+    outputDirectory = file("src/main/java/pwms/grammar")
+}
+
+test {
+    useJUnitPlatform()
+
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+}
+
+
