--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 
     // antlr 4
     antlr "org.antlr:antlr4:4.9.2"
+
+    // pretty print tables
+    implementation group: 'com.jakewharton.fliptables', name: 'fliptables', version: '1.1.0'
+
 }
 
 
@@ -43,7 +47,10 @@ generateGrammarSource {
 
 tasks.withType(JavaCompile) {
     options.deprecation = true
+    options.encoding = "UTF-8"
 }
+
+compileTestJava.options.encoding = "UTF-8"
 
 test {
     useJUnitPlatform()
