Add main method

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,16 @@ dependencies {
     // pretty print tables
     implementation group: 'com.jakewharton.fliptables', name: 'fliptables', version: '1.1.0'
 
+    // arg parser
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
+
+
 }
 
 
 application {
     // Define the main class for the application.
-    mainClass = 'pwms.App'
+    mainClass = 'pers.ruikai.pwms.App'
 }
 
 generateGrammarSource {
